# c_course_excercises

./: C1.c  C1.h  C2.c  C3.c  C3.h  C4.c  C5.c  C6.c  C7.c  CMakeLists.txt  README.md
Assembly/course/: A1_1.s  A1_2.s  diag_inv.s  mat_higher_row_number.s  mat_hmirror.s  mat_hmirror_ric.s
C/course/: C3_1.c  C4_1.c  C4_2.c
C/data_struct_and_algo/graps/: graph.c  graph.h
C/data_struct_and_algo/ll/: ll.c  ll.h
C/data_struct_and_algo/multytype_ll/: config.h  main.c  parse.c
C/pre-course/tested-standalone/: C1.c  C6.c
C/projects/shell/: Makefile  ascii.c  ascii.h  shell.c
C/projects/shell/calendar/: cal  calendar.c  calendar.h  config.txt  todo.txt
C/test/: hateville.c  minecraft.c
C/test/header_file/: a.out  main.c  prova.c  prova.h
C/university/course/: C3_2.c
C/university/exams/: algo_10072020.c  algo_19062020.c  algo_25062021.c  calc02092021_3.c  calc17062021_1.c  calc19022021_1.c  calc19022021_2.c  calc20012020.c  calc21012021.c  calc21012021_2.c  calc21012021_3.c  calc29012019.c  precalc19122019.c
C/university/exams/retry/: calc20210121_1.c  calc20210121_2.c  calc20210121_3.c  calc20210219_1.c  calc20210219_2.c  calc20210617.c  calc20210709.c  calc20210902_1_template.c  calc20210902_2_template.c  calc20210913.c  calc20220124.c  ignore.txt  output  testo.txt
C/university/pre-course/tested-standalone/: C2.c  C3.c
C/university/tutoring_exercises/first_tutor/: list
not-tested/: C4.c
pre-course/not-tested/: C1.c  C3.c  C6.c
pre-course/tested-standalone/: C4.c
tested-standalone/: C1.c  C5.c  C7.c
(+15 files in other folders)
