cmake_minimum_required(VERSION 3.20)
project(EserciziCalcolatoriElettronici C)

set(CMAKE_C_STANDARD 99)

add_executable(EserciziCalcolatoriElettronici pre-course/not-tested/C1.c pre-course/not-tested/C2.c pre-course/not-tested/C3.c pre-course/not-tested/C4.c pre-course/not-tested/C5.c pre-course/not-tested/C6.c pre-course/not-tested/C7.c)
