cmake_minimum_required(VERSION 3.20)
project(EserciziCalcolatoriElettronici C)

set(CMAKE_C_STANDARD 99)

add_executable(EserciziCalcolatoriElettronici C/university/pre-course/not-tested/C1.c C/university/pre-course/not-tested/C2.c C/university/pre-course/not-tested/C3.c C/university/pre-course/not-tested/C4.c C/university/pre-course/not-tested/C5.c C/university/pre-course/not-tested/C6.c C/university/pre-course/not-tested/C7.c)
